--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
   <div class="container">
     <h5 class="fw-bold mb-3">Bright Future Institute</h5>
     <p class="mb-2">
-      📍 Main Boulevard, Lahore, Pakistan <br>
+      📍 Main Boulevard, Karachi, Pakistan <br>
       ☎️ +92 300 1234567 | ✉️ info@brightfuture.edu.pk
     </p>
 
