--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 rel="stylesheet"
 href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
 />
-
+<link rel="shortcut icon" href="./icon.jpg" type="image/x-icon">
 </head>
 
 <body>
